Bug 35116 - Pasting using Return doesn't highlight cell as when using Ctrl+V
Summary: Pasting using Return doesn't highlight cell as when using Ctrl+V
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: Other Windows (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-08 07:36 UTC by Dakov
Modified: 2018-02-21 11:17 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Visualization of the issue - return doesn't highlight. (47.78 KB, image/png)
2011-03-08 09:03 UTC, Dakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dakov 2011-03-08 07:36:10 UTC
When you tap Ctrl+C and then move to another cell and press Return (to edit it), Return (surpringly - to some) works as Ctrl+V / paste.

Normally when you paste into a cell (using Ctrl+V or a custom shortcut) that overwritten cell gets highlighted - but when LibreOffice pastes using Return (in its special Return-works-as-Ctrl+V mode) the cell doesn't get highlighted.
Comment 1 Dakov 2011-03-08 09:03:43 UTC
Created attachment 44242 [details]
Visualization of the issue - return doesn't highlight.
Comment 2 Kohei Yoshida 2011-03-08 09:12:01 UTC Comment hidden (off-topic)
Comment 3 Kohei Yoshida 2011-03-08 09:14:27 UTC
BTW, when you paste by ENTER, you don't do Ctrl-V beforehand; it's Ctrl-C and ENTER.  No Ctrl-V in the middle.  Can you try that instead?
Comment 4 Kohei Yoshida 2011-03-08 09:17:00 UTC
Meanwhile, when there is a pre-selection, doing paste by ENTER should not have cleared the selection.  That part is a bug.
Comment 5 Dakov 2011-03-08 09:38:54 UTC
(In reply to comment #3)
> BTW, when you paste by ENTER, you don't do Ctrl-V beforehand; it's Ctrl-C and
> ENTER.  No Ctrl-V in the middle.  Can you try that instead?

Yes - I only press Ctrl+C - arrow down a few times - then Return (not Enter on the NumPad).

Ah yes - I didn't notice the the hightlight of the copy buffer source disappeared. That's not serious - it's just cool when the highlight is there :)
Comment 6 Kohei Yoshida 2011-03-08 09:44:21 UTC
(In reply to comment #5)
> (In reply to comment #3)
> > BTW, when you paste by ENTER, you don't do Ctrl-V beforehand; it's Ctrl-C and
> > ENTER.  No Ctrl-V in the middle.  Can you try that instead?
> 
> Yes - I only press Ctrl+C - arrow down a few times - then Return (not Enter on
> the NumPad).

Ah, then I can't reproduce it on my end I'm afraid.

Ah, I got it.  When you copy and paste-by-enter (or return) only a single cell, Calc won't highlight the pasted cell.  When you copy and paste-by-enter a cell range i.e. more than one cell, then it highlights when pasted.

I can have this fixed on a single-cell-paste case.
Comment 7 Dakov 2011-03-08 09:53:04 UTC
Cool!
Comment 8 Kohei Yoshida 2011-03-22 16:52:57 UTC
I now remember the rationale.  The selection was cleared to allow the cursor to move downward on subsequent return/enter.  So, this behavior of not highlighting a single selection was in fact intentional.

However, after thinking about this a bit, I'm in favor of removing this behavior, for now.  In the future we plan to change the cursor behavior itself, so this behavior might change again.  But that's a long term plan.
Comment 9 Kohei Yoshida 2011-03-22 16:56:45 UTC
Fixed on master.