Let's not clear single cell selection after enter-paste. (fdo#35116)